[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["color", "derive", "env"] }
confy = "0.3.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1", features = ["full"] }
